packages/build/tests/error/build/fixtures/fail_plugin/plugin_two.js
module.exports = {
  onInit() {
    console.log('onInit')
  },
  onBuild() {
    console.log('onBuild')
  },
}
